# haven-daw

./: .gitignore  README.md
ai_server/: requirements.txt  server.py
daw_modules/: Cargo.toml  decod.txt.txt  decoder.txt.txt  main.txt.txt  player.txt.txt  project.json  waveformmod.txt
daw_modules/sessions/: session.json
daw_modules/src/: analyzer.rs  audio.rs  audio_runtime.rs  daw_controller.rs  engine_main.rs  lib.rs  main.rs  player.rs
daw_modules/src/ai/: ai_schema.rs  governance.rs  mod.rs  pipeline.rs
daw_modules/src/bpm/: adapter.rs  detector.rs  mod.rs  utils.rs
daw_modules/src/decoder/: control.rs  dsp.rs  mod.rs  output.rs  pipe.rs  resample.rs
daw_modules/src/effects/: compressor.rs  equalizer.rs  mod.rs  reverb.rs
daw_modules/src/engine/: automation.rs  metering.rs  mixer.rs  mod.rs  output.rs  time.rs  track.rs
daw_modules/src/recorder/: file_writer.rs  input.rs  live_waveform.rs  mod.rs  monitor.rs
daw_modules/src/session/: commands.rs  export.rs  mod.rs  serialization.rs
daw_modules/src/waveform/: mod.rs  terminal.rs
haven/: package-lock.json  package.json
haven/src-tauri/: 2  Cargo.toml  tauri.conf.json
haven/src-tauri/src/: ai_transaction.rs  automation.rs  effects.rs  main.rs  stem_separation.rs
haven/src/lib/components/: AIChatbot.svelte  AutomationLane.svelte  CompressorWindow.svelte  ContextMenu.svelte  DraggableTrackItem.svelte  EqWindow.svelte  Header.svelte  Knob.svelte  LandingModal.svelte  Loader.svelte  MenuDropdown.svelte  ReverbWindow.svelte  (+6 more)
haven/src/routes/: +layout.svelte  +page.svelte  layout.css
(+5 files in other folders)
