[package]
name = "daw_modules"
version = "0.1.0"
edition = "2024"

[lib]
name = "daw_modules"
path = "src/lib.rs"

[[bin]]
name = "player"
path = "src/main.rs"

[[bin]]
name = "engine_player"
path = "src/engine_main.rs"


[dependencies]
anyhow = "1.0.100"
cpal = "0.16.0"
crossterm = "0.29.0"
itertools = "0.14.0" # Not used, but no harm in leaving it
ringbuf = "0.4.8"
rubato = "0.16.2"
symphonia = { version = "0.5.5", features = ["wav", "mp3", "flac", "ogg", "aac", "pcm"] }
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6.4.1"