# haven\src-tauri\Cargo.toml 

[package]
name = "haven"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"

tauri-plugin-dialog = "2"

cpal = "0.16.0"

daw_modules = { path = "../../daw_modules"}
tokio = { version = "1.49.0", features = ["full"] }

# --- NEW DEPENDENCY FOR AI ---
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
